Wrap all event points in div to fix highlighting
Previously, on Chrome, row and column highlight on hover would highlight
the table cell as a circle instead of treating it independently from
row, leading weird white spaces in the corners of the cell. (Note to
self: you took a screenshot of this behavior, maybe post it in an issue
or something.)

This increases the number of DOM elements, so ideally this would not be
needed. Might be possible to revert if Chrome ever fixes the issue.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -140,45 +140,46 @@ table.results-classic {
     background-color: #eeeeee;
   }
 
-  td.event-points[data-points='1'],
+  td.event-points[data-points='1'] div,
   td.event-points-focus[data-points='1'] div,
-  td.rank[data-points='1'] {
+  td.rank[data-points='1'] div {
     background-color: $material-color-yellow-400;
     border-radius: 1em;
   }
-  td.event-points[data-points='2'],
+  td.event-points[data-points='2'] div,
   td.event-points-focus[data-points='2'] div,
-  td.rank[data-points='2'] {
+  td.rank[data-points='2'] div {
     background-color: $material-color-blue-grey-100;
     border-radius: 1em;
   }
-  td.event-points[data-points='3'],
+  td.event-points[data-points='3'] div,
   td.event-points-focus[data-points='3'] div,
-  td.rank[data-points='3'] {
+  td.rank[data-points='3'] div {
     background-color: $material-color-amber-200;
     border-radius: 1em;
   }
-  td.event-points[data-points='4'],
+  td.event-points[data-points='4'] div,
   td.event-points-focus[data-points='4'] div,
-  td.rank[data-points='4'] {
+  td.rank[data-points='4'] div {
     background-color: $material-color-yellow-100;
     border-radius: 1em;
   }
-  td.event-points[data-points='5'],
+  td.event-points[data-points='5'] div,
   td.event-points-focus[data-points='5'] div,
-  td.rank[data-points='5'] {
+  td.rank[data-points='5'] div {
     background-color: $material-color-light-green-100;
     border-radius: 1em;
   }
-  td.event-points[data-points='6'],
+  td.event-points[data-points='6'] div,
   td.event-points-focus[data-points='6'] div,
-  td.rank[data-points='6'] {
+  td.rank[data-points='6'] div {
     background-color: $material-color-pink-100;
     border-radius: 1em;
   }
 
-  // make medals circular for rank (wider table cell)
-  td.rank {
+  // make medals circular (replicate the behavior before div wrapping needed for
+  // Chrome, gosh darn it Chrome)
+  td.rank, td.event-points {
     padding: 0;
 
     div {
